--- a/style.css
+++ b/style.css
@@ -1,12 +1,40 @@
-.heroSectionOverlay{
-    /* position: absolute;
+body, html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+.heroSectionOverlay {
+    position: fixed;
     width: 100%;
-    height: 200px;
-    background: rgba(0, 0, 0, 0.5); */
-    position: absolute;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    inset: 0;
+    z-index: 1;
+}
+.topContainer{
     top: 0;
     left: 0;
+    bottom: 0;
+    height: 100%;
     width: 100%;
-    height: 150px;
-    background: linear-gradient(to bottom, rgba(0,0,0,1),rgba(255,255,255,0));
+}
+.heroTitle {
+    position: fixed;
+    font-size: 4rem;
+    font-weight: bold;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    z-index: 2;
+}
+.moviesSection{
+    position: absolute;
+    top: 1000px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(100, 100, 100); /* Black background */
+    z-index: 0; /* Below other content */
+}
+.footer {
+    position:absolute
 }
