--- a/style.css
+++ b/style.css
@@ -20,7 +20,9 @@ body, html {
 }
 .heroTitle {
     position: fixed;
-    font-size: 4rem;
+    left: 40px;
+    font-family: sans-serif;
+    font-size: 2.5rem;
     font-weight: bold;
     text-align: center;
     color: rgb(255, 255, 255);
@@ -28,12 +30,12 @@ body, html {
 }
 .moviesSection{
     position: absolute;
-    top: 1000px;
+    top: 800px;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(100, 100, 100); /* Black background */
-    z-index: 0; /* Below other content */
+    background-color: rgb(100, 100, 100);
+    z-index: 0;
 }
 .footer {
     position:absolute
