--- a/style.css
+++ b/style.css
@@ -1,41 +1,59 @@
 body, html {
+    min-width: 1000px;
     height: 100%;
     margin: 0;
     padding: 0;
 }
-.heroSectionOverlay {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    inset: 0;
-    z-index: 1;
-}
-.topContainer{
-    top: 0;
-    left: 0;
-    bottom: 0;
-    height: 100%;
-    width: 100%;
-}
 .heroTitle {
     position: fixed;
-    left: 40px;
+    top: 5px;
+    left: 20px;
     font-family: sans-serif;
     font-size: 2.5rem;
     font-weight: bold;
     text-align: center;
-    color: rgb(255, 255, 255);
-    z-index: 2;
+    color: rgb(255, 192, 0);
+    z-index: 10;
+}
+.navBar{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 20%;
+    background: linear-gradient(to bottom, rgb(0, 0, 0), rgba(255, 255, 255, 0));
+    z-index: 3;
+}
+.signInButton{
+    position:fixed;
+    top: 30px;
+    right: 70px;
+    padding: 10px 15px;
+    font-size: 12px;
+    font-weight: bolder;
+    background: rgb(255, 192, 0);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 5;
+}
+.LanguageDropdown{
+    position:fixed;
+    top: 30px;
+    right: 150px;
+    padding: 8px 10px;
+    font-size: 12px;
+    font-weight: bolder;
+    background: rgb(150, 150, 150);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 4;
 }
 .moviesSection{
-    position: absolute;
-    top: 800px;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    margin-top: -5px;
+    min-width: 100%;
+    min-height: 100vh;
     background-color: rgb(100, 100, 100);
-    z-index: 0;
 }
 .footer {
     position:absolute
