--- a/style.css
+++ b/style.css
@@ -36,6 +36,19 @@ body, html {
     cursor: pointer;
     z-index: 5;
 }
+.signUpButton{
+    position:fixed;
+    top: 30px;
+    right: 20px;
+    padding: 10px 15px;
+    font-size: 12px;
+    font-weight: bolder;
+    background: rgb(0, 150, 120);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 5;
+}
 .LanguageDropdown{
     position:fixed;
     top: 30px;
@@ -43,7 +56,7 @@ body, html {
     padding: 8px 10px;
     font-size: 12px;
     font-weight: bolder;
-    background: rgb(150, 150, 150);
+    background: rgb(100, 100, 100);
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -53,7 +66,7 @@ body, html {
     margin-top: -5px;
     min-width: 100%;
     min-height: 100vh;
-    background-color: rgb(100, 100, 100);
+    background-color: rgb(70, 70, 70);
 }
 .footer {
     position:absolute
