--- a/style.css
+++ b/style.css
@@ -62,33 +62,86 @@ body, html {
     cursor: pointer;
     z-index: 4;
 }
+.background{
+    width: 100%;
+    height: 75%;
+}
 .moviesSection{
     margin-top: -5px;
     min-width: 100%;
     min-height: 100vh;
     background-color: rgb(70, 70, 70);
 }
-.heroTitle {
+.movieTitle {
     position: absolute;
+    top: 700px;
+    left: 25%;
+    width: 50%;
+    font-family: sans-serif;
+    font-size: 2.5rem;
+    font-weight: bold;
+    text-align: center;
+    color: rgb(109, 255, 146);
+    z-index: 10;
 }
 
 .image1{
+    margin-top: 10%;
     margin-left: 7.5%;
     width: 25%;
     object-fit: cover;
   }
-  .image2{
+.image2{
+    margin-top: 10%;
     margin-left: 5%;
     width: 25%;
     object-fit: cover;
   }
-  .image3{
+.image3{
+    margin-top: 10%;
     margin-left: 5%;
     width: 25%;
     object-fit: cover;
-
   }
-  
+  .rentButton1{
+    position: absolute;
+    top: 145%;
+    left: 9%;
+    padding: 20px 30px;
+    font-size: 18px;
+    font-weight: bolder;
+    background: rgb(244,71,134);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 3;
+}
+.rentButton2{
+    position: absolute;
+    top: 145%;
+    left: 39%;
+    padding: 20px 30px;
+    font-size: 18px;
+    font-weight: bolder;
+    background: rgb(88, 182, 218);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 3;
+}
+.rentButton3{
+    position: absolute;
+    top: 145%;
+    left: 69.5%;
+    padding: 20px 30px;
+    font-size: 18px;
+    font-weight: bolder;
+    background: rgb(255, 255, 255);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 3;
+}
 .footer {
     position:absolute
 }
