--- a/style.css
+++ b/style.css
@@ -15,6 +15,18 @@ body, html {
     color: rgb(255, 192, 0);
     z-index: 10;
 }
+.heroText {
+    position: absolute;
+    top: 20%;
+    left: 20px;
+    font-family: sans-serif;
+    font-size: 4rem;
+    font-weight: bolder;
+    text-align: center;
+    color: rgb(0, 255, 255);
+    
+    z-index: 8;
+}
 .navBar{
     position: fixed;
     top: 0;
@@ -64,17 +76,17 @@ body, html {
 }
 .background{
     width: 100%;
-    height: 75%;
+    height: 50%;
 }
 .moviesSection{
     margin-top: -5px;
     min-width: 100%;
-    min-height: 100vh;
+    min-height: 80vh;
     background-color: rgb(70, 70, 70);
 }
 .movieTitle {
     position: absolute;
-    top: 700px;
+    top: 50%;
     left: 25%;
     width: 50%;
     font-family: sans-serif;
@@ -104,10 +116,10 @@ body, html {
     object-fit: cover;
   }
   .rentButton1{
-    position: absolute;
-    top: 145%;
-    left: 9%;
-    padding: 20px 30px;
+    position:relative;
+    margin-top: 1%;
+    margin-left: 8%;
+    padding: 20px 3%;
     font-size: 18px;
     font-weight: bolder;
     background: rgb(244,71,134);
@@ -117,10 +129,9 @@ body, html {
     z-index: 3;
 }
 .rentButton2{
-    position: absolute;
-    top: 145%;
-    left: 39%;
-    padding: 20px 30px;
+    position:relative;
+    margin-left: 5.5%;
+    padding: 20px 3%;
     font-size: 18px;
     font-weight: bolder;
     background: rgb(88, 182, 218);
@@ -130,10 +141,9 @@ body, html {
     z-index: 3;
 }
 .rentButton3{
-    position: absolute;
-    top: 145%;
-    left: 69.5%;
-    padding: 20px 30px;
+    position:relative;
+    margin-left: 5.5%;
+    padding: 20px 3%;
     font-size: 18px;
     font-weight: bolder;
     background: rgb(255, 255, 255);
@@ -142,6 +152,33 @@ body, html {
     cursor: pointer;
     z-index: 3;
 }
-.footer {
-    position:absolute
+.footerSection {
+    position:absolute;
+    width: 100%;
+    height: 15%;
+    background-color: rgb(40, 40, 40);
+    color: white;
+}
+.footerTitle1 {
+    position: absolute;
+    margin-left: 100px;
+}
+.links1 {
+    margin-left: 100px;
+    margin-top: 50px;
+}
+.footerTitle2 {
+    position: absolute;
+    margin-left: 550px;
+    margin-top: -70px;
+}
+.links2 {
+    position: absolute;
+    margin-left: 550px;
+    margin-top: -40px;
+}
+.copyright {
+    position: absolute;
+    margin-left: 850px;
+    margin-top: -65px;
 }
