--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
-body, html {
+body,
+html {
     min-width: 1000px;
     height: 100%;
     margin: 0;
     padding: 0;
 }
+
 .title {
     position: fixed;
     top: 5px;
@@ -15,6 +17,7 @@ body, html {
     color: rgb(255, 192, 0);
     z-index: 10;
 }
+
 .heroText {
     position: absolute;
     top: 20%;
@@ -24,10 +27,11 @@ body, html {
     font-weight: bolder;
     text-align: center;
     color: rgb(0, 174, 255);
-    
-    z-index: 8;
+
+    z-index: 3;
 }
-.navBar{
+
+.navBar {
     position: fixed;
     top: 0;
     width: 100%;
@@ -35,8 +39,9 @@ body, html {
     background: linear-gradient(to bottom, rgb(0, 0, 0), rgba(255, 255, 255, 0));
     z-index: 3;
 }
-.signInButton{
-    position:fixed;
+
+.signInButton {
+    position: fixed;
     top: 30px;
     right: 100px;
     padding: 10px 15px;
@@ -48,8 +53,9 @@ body, html {
     cursor: pointer;
     z-index: 5;
 }
-.signUpButton{
-    position:fixed;
+
+.signUpButton {
+    position: fixed;
     top: 30px;
     right: 20px;
     padding: 10px 15px;
@@ -61,8 +67,9 @@ body, html {
     cursor: pointer;
     z-index: 5;
 }
-.LanguageDropdown{
-    position:fixed;
+
+.LanguageDropdown {
+    position: fixed;
     top: 30px;
     right: 180px;
     padding: 8px 10px;
@@ -74,16 +81,19 @@ body, html {
     cursor: pointer;
     z-index: 4;
 }
-.background{
+
+.background {
     width: 100%;
     height: 50%;
 }
-.moviesSection{
+
+.moviesSection {
     margin-top: -5px;
     min-width: 100%;
     min-height: 80vh;
     background-color: rgb(70, 70, 70);
 }
+
 .movieTitle {
     position: absolute;
     top: 50%;
@@ -94,42 +104,46 @@ body, html {
     font-weight: bold;
     text-align: center;
     color: rgb(51, 180, 0);
-    z-index: 10;
+    z-index: 2;
 }
 
-.image1{
+.image1 {
     margin-top: 10%;
     margin-left: 7.5%;
     width: 25%;
     object-fit: cover;
-  }
-.image2{
+}
+
+.image2 {
     margin-top: 10%;
     margin-left: 5%;
     width: 25%;
     object-fit: cover;
-  }
-.image3{
+}
+
+.image3 {
     margin-top: 10%;
     margin-left: 5%;
     width: 25%;
     object-fit: cover;
-  }
-  .rentButton1{
-    position:relative;
+}
+
+.rentButton1 {
+    position: relative;
     margin-top: 1%;
     margin-left: 8%;
     padding: 20px 3%;
     font-size: 18px;
     font-weight: bolder;
-    background: rgb(244,71,134);
+    background: rgb(244, 71, 134);
     border: none;
     border-radius: 5px;
     cursor: pointer;
     z-index: 3;
 }
-.rentButton2{
-    position:relative;
+
+.rentButton2 {
+    position: relative;
     margin-left: 7%;
     padding: 20px 3%;
     font-size: 18px;
@@ -140,8 +154,9 @@ body, html {
     cursor: pointer;
     z-index: 3;
 }
-.rentButton3{
-    position:relative;
+
+.rentButton3 {
+    position: relative;
     margin-left: 7%;
     padding: 20px 3%;
     font-size: 18px;
@@ -152,31 +167,37 @@ body, html {
     cursor: pointer;
     z-index: 3;
 }
+
 .footerSection {
-    position:absolute;
+    position: absolute;
     width: 100%;
     height: 15%;
     background-color: rgb(40, 40, 40);
     color: white;
 }
+
 .footerTitle1 {
     position: absolute;
     margin-left: 100px;
 }
+
 .links1 {
     margin-left: 100px;
     margin-top: 50px;
 }
+
 .footerTitle2 {
     position: absolute;
     margin-left: 550px;
     margin-top: -70px;
 }
+
 .links2 {
     position: absolute;
     margin-left: 550px;
     margin-top: -40px;
 }
+
 .copyright {
     position: absolute;
     margin-left: 850px;
